--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 
 spring.datasource.url=jdbc:mysql://localhost/belajar
 spring.datasource.username=root
-spring.datasource.password=127127
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
